--- a/index.html
+++ b/index.html
@@ -3,28 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MINECRAFT</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Banner Minecraft</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-        <h1>Mayron Compras e Vendas</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="#">Início</a></li>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Produtos</a></li>
-            <li><a href="#">Contato</a></li>
-        </ul>
-    </nav>
     <div class="container">
-        <div class="hero">
-            <h2>Bem-vindo ao Minecraft</h2>
-            <p>Despertar, levantar, se animar para o dia
-Já é bom eu começar a me equipar
-Não posso esquecer nada nessa correria
-Se eu demorar eles não vão me esperar</p>
-        </div>
-        <div class="product-grid">
-            <div class="card">
+        <div class="banner" id="banner1"></div>
+        <div class="banner" id="banner2"></div>
+    </div>
+    <button id="changeBackground">Alterar Fundo</button>
+    <script src="scripts.js"></script>
+</body>
+</html>
