--- a/index.html
+++ b/index.html
@@ -3,14 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Banner Minecraft</title>
+    <title>Site Inspirado no Chico Laska</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <div class="banner" id="banner1"></div>
-        <div class="banner" id="banner2"></div>
+    <div class="wrapper">
+        <header>
+            <h1>Bem-vindo ao Site Inspirado no Chico Laska</h1>
+        </header>
+        <main>
+            <div class="banners">
+                <div class="banner" id="banner1"></div>
+                <div class="banner" id="banner2"></div>
+            </div>
+            <button id="changeBackground">Alterar Fundo</button>
+        </main>
     </div>
+    <script src="scripts.js"></script>
+</body>
+</html>
+
     <button id="changeBackground">Alterar Fundo</button>
     <script src="scripts.js"></script>
 </body>
